--- a/create_nft_loan.html
+++ b/create_nft_loan.html
@@ -901,8 +901,8 @@ var display = (async function(){
 	var newDiv = document.createElement('div');
 	var newBtn = document.createElement('button');
 	newBtn.value = "Lend";
-	newBtn.style = "color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:15; left:0;";
-	newBtn.onClick = "create_obligation(" + address + ")";
+	//newBtn.style = "color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:15; left:0;";
+	newBtn.onClick = "create_obligation()";
 	newBtn.id = 'b' + i;
 	newDiv.id = 't'+i;
 	chat.appendChild(newDiv);
