--- a/create_nft_loan.html
+++ b/create_nft_loan.html
@@ -901,9 +901,9 @@ var display = (async function(){
 	var newDiv = document.createElement('div');
 	var newBtn = document.createElement('button');
 	newBtn.value = "Lend";
-	//newBtn.style = "color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:15; left:0;";
-	newBtn.onClick = function(){
-		"create_obligation()";
+	newBtn.style = "color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:15; left:0;";
+	newBtn.onclick = function(){
+		"create_obligation(" + address + ")";
 		};
 	newBtn.id = 'b' + i;
 	newDiv.id = 't'+i;
