--- a/create_nft_loan.html
+++ b/create_nft_loan.html
@@ -1123,7 +1123,7 @@ var acct = (async function(){
 	var loan_amt = localStorage.getItem("Loan Amount");
 	var loan_term = localStorage.getItem("Loan Term");
 	
- 	const contract = web3.utils.toChecksumAddress(nft_k)
+ 	//const contract = web3.utils.toChecksumAddress(nft_k)
         var _data = new web3.eth.Contract(abi, contract_address).methods.TransferToLender(add1x, nft_id).encodeABI();
         const accounts = await window.ethereum.request({ method: 'eth_requestAccounts' });
         const account = accounts[0];
