--- a/create_nft_swap.html
+++ b/create_nft_swap.html
@@ -1013,7 +1013,7 @@ function drag(ev) {
 
 function drop(ev) {
   var data = ev.dataTransfer.getData("Text");
-  ev.target.appendChild(document.getElementById(data));
+  ev.target.appendChild(element.insertAdjacentHTML('beforeend', data));
   ev.preventDefault();
 }	
 
