--- a/create_nft_swap.html
+++ b/create_nft_swap.html
@@ -866,7 +866,7 @@ var display = (async function(){
 	console.log(addressCount);
 	
 	var toAdd = document.createDocumentFragment();
-	for (var i = addressCount; i<=0; i--){
+	for (var i = addressCount; i>=0; i--){
 	const address = await contract_bal.methods.address_list(i).call();
 	console.log(address);
 	var chat = document.getElementById("contract_address_ID"); // finds the container
