--- a/create_nft_swap.html
+++ b/create_nft_swap.html
@@ -918,7 +918,7 @@ var display = (async function(){
 	
 	const tokenID2 = await contract_bal.methods.token_contracts_list2(address).call();
 	//document.getElementById("loan_obligation").innerHTML = "Loan is already made is " + obligation;
-	console.log(obligation)
+	//console.log(obligation)
 	var newDiv = document.createElement('div');
 	newDiv.id = 'v'+i;
 	chat.appendChild(newDiv);
@@ -943,7 +943,7 @@ var display = (async function(){
 	//newBtn.id = 'a' + i;
 	
 	
-	chat.appendChild(newBtn);
+	//chat.appendChild(newBtn);
 	}
 	
 	
