--- a/create_nft_swap.html
+++ b/create_nft_swap.html
@@ -926,24 +926,24 @@ var display = (async function(){
 	document.getElementById("v" + i).innerHTML = "NFT Token ID2: " + tokenID2;
 	//const lender = await contract_bal.methods.lender_list(address).call();
 	//console.log(lender)
-	const latest = await web3.eth.getBlockNumber()
+	const latest = await contract_bal.methods.debt_obligation_list(address).call();
 	var newDiv = document.createElement('div');
 	newDiv.id = 'w'+i;
 	chat.appendChild(newDiv);
 	
-	document.getElementById("w" + i).innerHTML = "latest block: " + latest;
+	document.getElementById("w" + i).innerHTML = "swap completed: " + latest;
 	//document.getElementById("latest_block").innerHTML = latest;
 	console.log(latest)
-	//var newBtn = document.createElement('input');
-	//newBtn.setAttribute('type', 'button');
-	//newBtn.value = "claim collateral";
-	//newBtn.setAttribute('onclick', 'transfer_to_lender(' + "'" + address + "'" + "," + tokenID + ')');
+	var newBtn = document.createElement('input');
+	newBtn.setAttribute('type', 'button');
+	newBtn.value = "accept trade";
+	newBtn.setAttribute('onclick', 'accept_offer(' + "'" + contract_ID2 + "'" + ","  + "'" + address + "'" + "," + tokenID2 + ')');
 	//newBtn.style = "color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:15; left:0;";
 	
-	//newBtn.id = 'a' + i;
+	newBtn.id = 'a' + i;
 	
 	
-	//chat.appendChild(newBtn);
+	chat.appendChild(newBtn);
 	}
 	
 	
@@ -999,7 +999,7 @@ function getAccounts(){
 	
 }
 
-function create_obligation(addx){
+function make_trade(nft_address, Offeror_address, tokenID){
 var acct = (async function(){
   	
   //var result = await getAccounts()
@@ -1014,16 +1014,16 @@ var acct = (async function(){
 	//localStorage.setItem("mySharedData2", document.getElementById("user_name1").value);
 	
 	//var add1x = localStorage.getItem("mySharedData");
-	var add1x = addx
+	//var add1x = addx
 	//var add2x = localStorage.getItem("mySharedData2");
 	//var token_nx = localStorage.getItem("mySharedData1");
-	var amt = await contract_bal.methods.loan_amount_list(add1x).call();
-	var _amt = parseInt(amt) + 1
-	console.log(amt);
-	console.log(_amt);
+	//var amt = await contract_bal.methods.loan_amount_list(add1x).call();
+	//var _amt = parseInt(amt) + 1
+	//console.log(amt);
+	//console.log(_amt);
 	
  	//const contract_address1 = web3.utils.toChecksumAddress("0x19545d326fa247c495dcdbb99f88e0faebb956e5")
-        var _data = new web3.eth.Contract(abi, contract_address).methods.create_debt_obligation(add1x).encodeABI();
+        var _data = new web3.eth.Contract(abi, contract_address).accept_trade(nft_address, Offeror_address, tokenID).encodeABI();
         const accounts = await window.ethereum.request({ method: 'eth_requestAccounts' });
         const account = accounts[0];
 	const result = await web3.eth.getTransactionCount(account)
