--- a/create_nft_swap.html
+++ b/create_nft_swap.html
@@ -82,7 +82,7 @@ display: none;
 <h2 style="color:grey; font-family: helvetica narrow, sans-serif; position:absolute; top:0; left:0;">swapNFT</h2>
 <h3 style="color:grey; font-family: helvetica narrow, sans-serif; font-weight:200; position:absolute; top:0; right:0;" draggable="true" ondragstart="drag(event)"><a href="create_nft_loan_form.html">Offer trade</a></h3>
 <p id="contract_address_ID" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; font-weight:200; position:absolute; top:35; left:0;"></p>
-<div id="div1" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+
 
 </div>
 
@@ -937,7 +937,7 @@ var display = (async function(){
 	var newBtn = document.createElement('input');
 	newBtn.setAttribute('type', 'button');
 	newBtn.value = "accept trade";
-	newBtn.setAttribute('onclick', 'accept_offer(' + "'" + contract_ID2 + "'" + ","  + "'" + address + "'" + "," + tokenID2 + ')');
+	newBtn.setAttribute('onclick', 'make_trade(' + "'" + contract_ID2 + "'" + ","  + "'" + address + "'" + "," + tokenID2 + ')');
 	//newBtn.style = "color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:15; left:0;";
 	
 	newBtn.id = 'a' + i;
